# serverless-cpp

./: .gitignore  .gitmodules  readme.md
code/: CMakeLists.txt  Dockerfile  build.sh  template.yaml
code/cmake/: aws-lambda-runtime-config.cmake
code/lib/: CMakeLists.txt  CmakeLists.txt
code/src/: CMakeLists.txt  create_dictionary.cpp  create_quote.cpp  main.cpp
code/test/data/: lotr-The_Two_Towers.txt  lotr_The_Fellowship_Of_The_Ring.txt  lotr_The_Return_Of_The_King.txt
